Add testling to package.json

--- a/package.json
+++ b/package.json
@@ -12,12 +12,25 @@
   "scripts": {
     "test": "browserify --debug test/*-test.js | testling -u"
   },
+  "testling": {
+    "files": "test/*.js",
+    "browsers": [
+      "ie/6..latest",
+      "chrome/22..latest",
+      "firefox/16..latest",
+      "safari/latest",
+      "opera/11.0..latest",
+      "iphone/6",
+      "ipad/6",
+      "android-browser/latest"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/connrs/node-deemitter.git"
   },
   "authors": [
     "Paul Connolley @connrs <paul.connolley@gmail.com)"
-  ],
+    ],
   "license": "MIT (ricardo.mit-license.org)"
 }
