--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DEEmitter",
+  "name": "deemitter",
   "description": "DOM Event Handler using the EventEmitter interface",
   "version": "1.0.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "testling": "^1.7.1"
   },
   "scripts": {
-    "test": "browserify --debug test/*-test.js | testling -u"
+    "test": "browserify --debug test/*-test.js | testling -u
   },
   "testling": {
     "files": "test/*.js",
