Revised tests for better browser compatibility
I ran the tests in a number of other browsers manually (as Testling is
currently not available right now) and noticed that IE9 wasn't happy
dispatching events to elements that weren't actually appended to the
body.

I updated the tests and can now be confident that the tests pass in IE9

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deemitter",
   "description": "DOM Event Handler using the EventEmitter interface",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
@@ -10,7 +10,7 @@
     "testling": "^1.7.1"
   },
   "scripts": {
-    "test": "browserify --debug test/*-test.js | testling -u
+    "test": "browserify --debug test/*-test.js | testling -u"
   },
   "testling": {
     "files": "test/*.js",
